added new elements like link, abbr, lang, charset, meta name and its content, and entities like &nbsp;

--- a/first_program/first_program.html
+++ b/first_program/first_program.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>first_program</title>
-	</head>
-	<body>
-		<h1>Hello World</h1>
-		<p>This is my first HTML program</p>
-	</body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="author" content="Ayush Hegde">
+    <meta name="description" content="This is my first html program">
+    <link rel="icon" href="icon.png" type="image/png">
+    <title>my first html page</title>
+</head>
+<body>
+    <h1>&nbsp;Hello World</h1>
+    <h2>&nbsp;I am ready to learn <abbr title="Hypertext Markup Language">HTML</abbr></h2>
+    <p>This is me first time writing a HTML program on journey to learn HTML as I was asked to by club i joined recently</p>
+    <p>Thank you</p>
+    <hr>
+</body>
 </html>
